fixed lkayout spacing

--- a/hsDocs.css
+++ b/hsDocs.css
@@ -6,25 +6,29 @@
   position: absolute;
   display: block;
   overflow: scroll;
-  border: 0;
 }
-.hs-column-layout .hs-layout-spacing > .hs-layout {
-  border: 1px solid white;
+.hs-layout-spacing .hs-column-layout > .hs-layout {
+  border-left: 0px solid white;
+  border-right: 0px solid white;
 }
-.hs-column-layout .hs-layout-spacing > .hs-layout > .hs-layout:first-of-type {
+.hs-layout-spacing .hs-column-layout > .hs-layout:first-of-type {
   border-left: 0;
 }
-.hs-column-layout .hs-layout-spacing > .hs-layout > .hs-layout:last-of-type {
+.hs-layout-spacing .hs-column-layout > .hs-layout:last-of-type {
   border-right: 0;
 }
 .hs-layout-spacing .hs-row-layout > .hs-layout {
-  border: 1px solid white;
+  border-top: 0px solid white;
+  border-bottom: 0px solid white;
 }
 .hs-layout-spacing .hs-row-layout > .hs-layout:first-of-type {
   border-top: 0;
 }
 .hs-layout-spacing .hs-row-layout > .hs-layout:last-of-type {
   border-bottom: 0;
+}
+.hs-layout-spacing .hs-tile-layout > .hs-layout {
+  border: 0px solid white;
 }
 .hs-row-layout {
   box-sizing: border-box;
@@ -703,6 +707,17 @@ th {
   color: #44f;
   padding: 10px 0.4em 10px 0em;
   color: #888;
+}
+.hs-item-abstract-flag {
+  color: #44f;
+  padding: 10px 0.4em 10px 0em;
+  color: #888;
+}
+.hs-item-const-flag {
+  color: #44f;
+  padding: 10px 0.4em 10px 0em;
+  font-weight: bold;
+  color: #222;
 }
 .hs-item-constructorProperty-flag {
   color: #44f;
